...
              unselectedLabelColor: theme.colorScheme.onSurfaceVariant,
              labelStyle: theme.textTheme.labelLarge?.copyWith(
                fontWeight: FontWeight.w600,
              ),
              unselectedLabelStyle: theme.textTheme.labelLarge,
              tabs: const [
                Tab(text: 'Skill Plans'),
                Tab(text: 'Catalogue'),
              ],
            ),
          ),

          const Spacer(),
...
